--- a/trunk/beersoap/Makefile.mac
+++ b/trunk/beersoap/Makefile.mac
@@ -2,20 +2,21 @@ CC=/usr/bin/g++ -Wall -m32 -ggdb
 INCLUDE=-I. -I/usr/include/libxml2 -I/usr/local/include -I../pdom
 LDFLAGS=-lxml2 -L/usr/local/lib -lcurl -L../pdom -lpdom
 
-OBJECTS=CurlInterface.o BeerSoap.o BeerSoapServiceMethod.o
+OBJECTS=WSDL.o WSDLType.o WSDLPart.o WSDLMessage.o WSDLOperation.o WSDLPortType.o WSDLBinding.o WSDLPort.o WSDLService.o \
+	BeerSoapLoader.o CurlInterface.o BeerSoap.o BeerSoapServiceMethod.o
 
-all: clean beersoap test
+all: beersoap test
 
 %.o: %.cpp
 	$(CC) -c -o $@ $< $(INCLUDE)
 
 clean:
 	rm -rf *.o *.so *.dylib
+	@ln -s ../pdom/libpdom.dylib .
 	
 beersoap: $(OBJECTS)
 	$(CC) -dynamiclib -o libbeersoap.dylib $^ $(LDFLAGS)
 
 test: $(OBJECTS)
-	@ln -s ../pdom/libpdom.dylib .
 	$(CC) -o test test.cpp $(LDFLAGS) $(INCLUDE) -L. -lbeersoap
 
